--- a/module2/CSS/stylesheet.css
+++ b/module2/CSS/stylesheet.css
@@ -1,117 +1,90 @@
 *{
-	 box-sizing: border-box;
-
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
 }
 h1{
-text-align: center;
-font-size: 120;
-}
-.div1{
-	background-color: #6DBEFC ;
-
-	font-family: "Lucida Console", Helvetica, sans-serif;
-	border:	1px solid  black ;
-    margin: 20px ;
-  padding: 5px;
-
-}
-p{
 	font-style: italic;
-	 font-weight: bold;
-}
-#ch{
-	 
-	 background-color: #B0785D;
-	 border:1px solid  black ;
-	 width : 100px;
-	 text-align: center;
-	 height: 20px;
-	 border:1px solid  black ;
+	text-align: center;
 
 }
-#su{
-	 
-	 background-color: #FF386F;
-	 border:1px solid  black ;
-	 width : 100px;
-	 text-align: center;
-	 height: 20px;
-	 border:1px solid  black ;
+
+p{
+	margin: 0;
+	padding: 26px;
 
 }
-#be{
-	 
-	 background-color: #A243B0;
-	 border:1px solid  black ;
-	 width : 100px;
-	 text-align: center;
-	 height: 20px;
-	 border:1px solid  black ;
-
-
+.row{
+	width: 100%;
 }
-@media (min-width: 992px){
-	.div1{
-		float: left ;
-		width: 29%;
-	}
-	#be{
-	 position: relative;
-	   left: 60%;}
-	   #su{
-	 position: relative;
-	   left: 60%;}
-	   #ch{
-	 position: relative;
-	   left: 60%;}
+#div1,#div2,#div3 {
+	border: none;
+	padding: 10px;
+	overflow: auto;
 
-
+	float: left;
 }
-@media  (min-width: 768px) and (max-width: 991px){
-	#Chicken{
-		float: left ;
-		width:  44%;
-	}
-	#beef{
-		float: left ;
-		width:  44%;
-	}
+section {
+	background-color: #E051FF;
+	position: relative;
 	
-	#sushi{
-		float: left ;
-
-		width: 96%;
-	}
-	#ch{
-	 position: relative;
-	   left: 65%;}
-
-	#be{
-	 position: relative;
-	   left: 65%;}
-	   #su{
-	 position: relative;
-	   left: 85%;}
-	   
+	border: 1px solid black;
+}
+.title{
+	position: absolute ;
+	right: 0;
+	border: 1px solid black;
+	padding: 5px;
+	width: 55px;
+	text-align: center;
 
 }
+#chicken {
+	background-color:#82FF9C;
 
-@media  (max-width: 767px){
-	.div1{
-		float: left ;
-		width: 96%;
-	}
-	#ch{
-	 position: relative;
-	   left: 80%;}
-
-	#be{
-	 position: relative;
-	   left: 80%;}
-	   #su{
-	 position: relative;
-	   left: 80%;}
-	   
-
+	
 }
 
+#beef {
+	background-color: #FF8B7A;
+	}
+
+#sushi {
+	background-color: #4EFFF7;
+}
+@media (min-width: 992px) {
+	#div2{
+		width: 33.33%;
+	}
+	#div1{
+		width: 33.33%;
+	}
+	#div3{
+		width: 33.33%;
+	}
+
+}
+@media (min-width: 768px) and (max-width: 991px) {
+	#div2{
+		width: 50%
+	}
+	#div1{
+		width: 50%;
+	}
+	#div3{
+		width: 100%;
+	}
+
+}
+@media (max-width: 768px) {
+	#div2{
+		width: 100%
+	}
+	#div1{
+		width: 100%;
+	}
+	#div3{
+		width: 100%;
+	}
+
+} 
